# pictobot

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pictobot.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/: index.rst.txt  pictobot.rst.txt
_static/: custom.css
docs/: conf.py
pictobot/: core.py  keyboards.py  messages.py  pictograms.py  search.py
pictobot/locale/en_US/LC_MESSAGES/: PictoBot.mo
pictobot/locale/fr_FR/LC_MESSAGES/: PictoBot.mo
pictobot/settings/: base.py  local_sample.py  production_sample.py
tests/: conftest.py  context.py  test_integration.py  test_unit.py
