[tool.poetry]
name = "pictobot"
version = "0.1.0"
description = "A helpful bot showing you pictograms when you're lost in translation"
authors = ["Jonathan Guitton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^13.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.5"
hypothesis = "^4.23"
sphinx = "^2.0"
telethon = "^1.23"
cryptg = "^0.2.post4"
pillow = "^8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
